added bootstrap and bootstrap-ui

--- a/frontend/src/app/home/home.html
+++ b/frontend/src/app/home/home.html
@@ -1,3 +1,14 @@
 <h1>HONEY IM HOME</h1>
 <h2>{{home.test}}</h2>
 <h3>{{home.svcTest}}</h3>
+<div class="container">
+    <div class="well">
+        Bootstrap works!
+    </div>
+
+    <h4>Single toggle</h4>
+    <pre>{{singleModel}}</pre>
+    <button type="button" class="btn btn-primary" ng-model="singleModel" uib-btn-checkbox btn-checkbox-true="1" btn-checkbox-false="0">
+        Single Toggle
+    </button>
+</div>
