--- a/frontend/src/app/layout/sidebar.html
+++ b/frontend/src/app/layout/sidebar.html
@@ -5,25 +5,25 @@
   <ul>
     <li class='active'>
       <a class='expandable' href='#' title='Dashboard'>
-        <span class='glyphicon glyphicon-home collapsed-element'></span>
+        <!--<span class='glyphicon glyphicon-home collapsed-element'></span>-->
         <span class='expanded-element'>Dashboard</span>
       </a>
     </li>
     <li>
       <a class='expandable' href='#' title='APIs'>
-        <span class='glyphicon glyphicon-wrench collapsed-element'></span>
+        <!--<span class='glyphicon glyphicon-wrench collapsed-element'></span>-->
         <span class='expanded-element'>APIs</span>
       </a>
     </li>
     <li>
       <a class='expandable' href='#' title='Settings'>
-        <span class='glyphicon glyphicon-cog collapsed-element'></span>
+        <!--<span class='glyphicon glyphicon-cog collapsed-element'></span>-->
         <span class='expanded-element'>Settings</span>
       </a>
     </li>
     <li>
       <a class='expandable' href='#' title='Account'>
-        <span class='glyphicon glyphicon-user collapsed-element'></span>
+        <!--<span class='glyphicon glyphicon-user collapsed-element'></span>-->
         <span class='expanded-element'>Account</span>
       </a>
     </li>
