--- a/frontend/src/app/layout/sidebar.html
+++ b/frontend/src/app/layout/sidebar.html
@@ -1,24 +1,24 @@
 <nav class="sidebar" ng-init="menuState = 0" ng-class="menuState ? 'sidebar-menu-expanded' : 'sidebar-menu-collapsed'">
   <a href="#" id="toggle-icon" ng-click="menuState = !menuState">
-    <span class="icon-menu"></span>
+    <span class="kowicon-menu"></span>
   </a>
   <ul class="main">
     <li class="xactive">
       <a href="#" title="Search">
-        <span class="icon-search"></span>
+        <span class="kowicon-search"></span>
         Search
       </a>
     </li>
     <li>
       <a href="#" title="FAQ">
-        <span class="icon-faq"></span>
+        <span class="kowicon-faq"></span>
         FAQ
       </a>
     </li>
     <li class="divider"></li>
     <li>
       <a href="#" title="Contact">
-        <span class="icon-contact"></span>
+        <span class="kowicon-contact"></span>
         Contact
       </a>
     </li>
@@ -28,44 +28,44 @@
   <ul class="categories">
     <li class="active dogs">
       <a href="#" title="Dogs">
-        <span class="icon-dogs"></span>
+        <span class="kowicon-dogs"></span>
         Dogs
       </a>
     </li>
     <li class="cats">
       <a href="#" title="Cats">
-        <span class="icon-cats"></span>
+        <span class="kowicon-cats"></span>
         Cats
       </a>
     </li>
     <li class="fish">
       <a href="#" title="Fish">
-        <span class="icon-fish"></span>
+        <span class="kowicon-fish"></span>
         Fish
       </a>
     </li>
     <li class="birds">
       <a href="#" title="Birds">
-        <span class="icon-birds"></span>
+        <span class="kowicon-birds"></span>
         Birds
       </a>
     </li>
     <li class="small_animals">
       <a href="#" title="Small animals">
-        <span class="icon-small_animals"></span>
+        <span class="kowicon-small_animals"></span>
         Small animals
       </a>
     </li>
     <li class="other">
       <a href="#" title="Other">
-        <span class="icon-plus"></span>
+        <span class="kowicon-plus"></span>
         Other
       </a>
     </li>
   </ul>
 
   <a href="#" id="logo-icon" title="Home">
-    <span class="icon-k"></span>
+    <span class="kowicon-k"></span>
     <img src="images/logo-sm.svg" class="expanded" alt="">
   </a>
 </nav>
