--- a/frontend/src/styles/layout/_sidebar.scss
+++ b/frontend/src/styles/layout/_sidebar.scss
@@ -1,116 +1,117 @@
 nav.sidebar {
-    position: fixed;
-    top: 0px;
-    left: 0px;
-    height: 100%;
-    overflow: hidden;
-    background: none repeat scroll 0 0 $sidebarBg;
+  z-index: 10;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  height: 100%;
+  overflow: hidden;
+  background: none repeat scroll 0 0 $sidebarBg;
+  color: white;
+  &.sidebar-menu-collapsed {
+    width: $sidebarWidth;
+    transition: width 300ms;
+    .expanded {
+      display: none;
+    }
+  }
+  &.sidebar-menu-expanded {
+    width: $sidebarExpandedWidth;
+    transition: width 300ms;
+  }
+  a#toggle-icon {
+    display: block;
+    height: 52px;
+    width: $sidebarWidth;
+    background-color: $sidebarBgDark;
+    outline: 0;
     color: white;
-    &.sidebar-menu-collapsed {
-        width: $sidebarWidth;
-        transition: width 300ms;
-        .expanded {
-            display: none;
+    text-align: center;
+    font-size: 27px;
+    span {
+      line-height: 60px;
+    }
+  }
+  a#logo-icon {
+    outline: 0;
+    color: $sidebarInactive;
+    font-size: 24px;
+    position: absolute;
+    bottom: 10px;
+    left: 18px;
+    img {
+      position: absolute;
+      bottom: 10px;
+      left: 0;
+    }
+  }
+  ul {
+    margin: 0;
+    padding: 0;
+    &.main {
+      margin-top: 13px;
+      li {
+        a {
+          color: $sidebarInactive;
+          &:hover {
+            color: $sidebarActive;
+          }
         }
+        &.active {
+          background-color: $sidebarActive;
+          a {
+            color: $sidebarActiveDark;
+          }
+        }
+      }
     }
-    &.sidebar-menu-expanded {
-        width: $sidebarExpandedWidth;
-        transition: width 300ms;
+    &.categories {
+      margin-top: 19px;
+      li {
+        a {
+          color: #fff;
+        }
+        $i: 1;
+        @each $class in $categories {
+          &.#{$class} {
+            &.active a,
+            a:hover {
+              color: nth($category_colors, $i);
+            }
+          }
+          $i: $i+1;
+        }
+      }
     }
-    a#toggle-icon {
+    li {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+      &.divider {
+        height: 2px;
+        background-color: #454545;
+        margin: 12px 6px;
+        &:last-child {
+          margin-top: 9px; // we want pixel-perfect shit
+        }
+      }
+      a {
         display: block;
-        height: 52px;
-        width: $sidebarWidth;
-        background-color: $sidebarBgDark;
         outline: 0;
-        color: white;
-        text-align: center;
-        font-size: 27px;
+        height: $sidebarMenuItemHeight;
+        text-decoration: none;
+        font-size: 20px;
+        line-height: 50px;
         span {
-            line-height: 60px;
+          display: block;
+          float: left;
+          text-align: center;
+          width: $sidebarWidth;
+          height: $sidebarMenuItemHeight;
+          font-size: 31px;
+          line-height: 60px;
         }
+      }
     }
-    a#logo-icon {
-        outline: 0;
-        color: $sidebarInactive;
-        font-size: 24px;
-        position: absolute;
-        bottom: 10px;
-        left: 18px;
-        img {
-            position: absolute;
-            bottom: 10px;
-            left: 0;
-        }
-    }
-    ul {
-        margin: 0;
-        padding: 0;
-        &.main {
-            margin-top: 13px;
-            li {
-                a {
-                    color: $sidebarInactive;
-                    &:hover {
-                        color: $sidebarActive;
-                    }
-                }
-                &.active {
-                    background-color: $sidebarActive;
-                    a {
-                        color: $sidebarActiveDark;
-                    }
-                }
-            }
-        }
-        &.categories {
-            margin-top: 19px;
-            li {
-                a {
-                    color: #fff;
-                }
-                $i: 1;
-                @each $class in $categories {
-                    &.#{$class} { 
-                        &.active a,
-                        a:hover {
-                            color: nth($category_colors, $i);
-                        }
-                    }
-                    $i: $i+1;
-                }
-            }
-        }
-        li {
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-            overflow: hidden;
-            &.divider {
-                height: 2px;
-                background-color: #454545;
-                margin: 12px 6px;
-                &:last-child {
-                    margin-top: 9px; // we want pixel-perfect shit
-                }
-            }
-            a {
-                display: block;
-                outline: 0;
-                height: $sidebarMenuItemHeight;
-                text-decoration: none;
-                font-size: 20px;
-                line-height: 50px;
-                span {
-                    display: block;
-                    float: left;
-                    text-align: center;
-                    width: $sidebarWidth;
-                    height: $sidebarMenuItemHeight;
-                    font-size: 31px;
-                    line-height: 60px;
-                }
-            }
-        }
-    }
+  }
 }
