Updated category selection

--- a/frontend/src/app/layout/sidebar.html
+++ b/frontend/src/app/layout/sidebar.html
@@ -65,7 +65,7 @@
   </ul>
 
   <a href="#" id="logo-icon" title="Home">
-    <span class="kowicon-k"></span>
+    <span class="kowicon-k collapsed"></span>
     <img src="images/logo-sm.svg" class="expanded" alt="">
   </a>
 </nav>
