--- a/frontend/src/styles/home/_home.scss
+++ b/frontend/src/styles/home/_home.scss
@@ -58,5 +58,14 @@ p.intro {
       font-size: 70px;
       margin-bottom: 17px;
     }
+    &:after {
+      content: "";
+      background: #626262;
+      position: absolute;
+      bottom: 10%;
+      right: 0;
+      height: 80%;
+      width: 1px;
+    }
   }
 }
