--- a/frontend/src/styles/_fonts.scss
+++ b/frontend/src/styles/_fonts.scss
@@ -1,5 +1,5 @@
 @font-face {
-    font-family: 'choplinextralight';
+    font-family: 'choplin';
     src: url('../fonts/choplin-extralight-demo-webfont.eot');
     src: url('../fonts/choplin-extralight-demo-webfont.eot?#iefix') format('embedded-opentype'),
          url('../fonts/choplin-extralight-demo-webfont.woff2') format('woff2'),
@@ -9,4 +9,16 @@
     font-weight: normal;
     font-style: normal;
 
+}
+
+@font-face {
+    font-family: 'choplin';
+    src: url('../fonts/choplin-medium-demo-webfont.eot');
+    src: url('../fonts/choplin-medium-demo-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/choplin-medium-demo-webfont.woff2') format('woff2'),
+         url('../fonts/choplin-medium-demo-webfont.woff') format('woff'),
+         url('../fonts/choplin-medium-demo-webfont.ttf') format('truetype'),
+         url('../fonts/choplin-medium-demo-webfont.svg#../fonts/choplinmedium-demo') format('svg');
+    font-weight: bold;
+    font-style: normal;
 }
