fixed some animations

--- a/frontend/src/app/home/home.html
+++ b/frontend/src/app/home/home.html
@@ -47,92 +47,98 @@
     </div>
   </div>
 
-  <h1>Hot items.</h1>
-  <div class="row">
-    <div class="col-md-3">
-      <div class="product multiple-images">
-        <div class="image" style="background-image:url('images/products/cooling_mat.jpg')">
-          <div class="overlay">
-            <span class="kowicon-product"></span>
-            view details
+  <div class="product-grid">
+    <h1>Hot items.</h1>
+    <div class="row">
+      <div class="col-md-3">
+        <div class="product multiple-images">
+          <div class="image" style="background-image:url('images/products/cooling_mat.jpg')">
+            <div class="overlay">
+              <span class="kowicon-product"></span>
+              view details
+            </div>
+            <div class="photo-count">
+              4
+            </div>
           </div>
-          <div class="photo-count">
-            4
+          <div class="information">
+            <a href="#" class="title">
+              Cooling mat
+            </a>
+            <span class="price">&euro; 15,49</span>
           </div>
         </div>
-        <div class="information">
-          <a href="#" class="title">
-            Cooling mat
-          </a>
-          <span class="price">&euro; 15,49</span>
+      </div>
+
+      <div class="col-md-3">
+        <div class="product">
+          <div class="image" style="background-image:url('images/products/cooling_mat.jpg')">
+            <div class="overlay">
+              <span class="kowicon-product"></span>
+              view details
+            </div>
+            <ul class="colors">
+              <li style="background: white;">White</li>
+              <li style="background: black;">Black</li>
+              <li style="background: blue;">Blue</li>
+            </ul>
+          </div>
+          <div class="information">
+            <a href="#" class="title">
+              Cooling mat
+            </a>
+            <span class="price">&euro; 15,49</span>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-3">
+        <div class="product">
+          <div class="image" style="background-image:url('images/products/cooling_mat.jpg')">
+            <div class="overlay">
+              <span class="kowicon-product"></span>
+              view details
+            </div>
+            <ul class="colors">
+              <li style="background: white;">White</li>
+              <li style="background: black;">Black</li>
+              <li style="background: blue;">Blue</li>
+            </ul>
+          </div>
+          <div class="information">
+            <a href="#" class="title">
+              Cooling mat
+            </a>
+            <span class="price">&euro; 15,49</span>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-3">
+        <div class="product">
+          <div class="image" style="background-image:url('images/products/cooling_mat.jpg')">
+            <div class="overlay">
+              <span class="kowicon-product"></span>
+              view details
+            </div>
+            <ul class="colors">
+              <li style="background: white;">White</li>
+              <li style="background: black;">Black</li>
+              <li style="background: blue;">Blue</li>
+            </ul>
+          </div>
+          <div class="information">
+            <a href="#" class="title">
+              Cooling mat
+            </a>
+            <span class="price">&euro; 15,49</span>
+          </div>
         </div>
       </div>
     </div>
 
-    <div class="col-md-3">
-      <div class="product">
-        <div class="image" style="background-image:url('images/products/cooling_mat.jpg')">
-          <div class="overlay">
-            <span class="kowicon-product"></span>
-            view details
-          </div>
-          <ul class="colors">
-            <li style="background: white;">White</li>
-            <li style="background: black;">Black</li>
-            <li style="background: blue;">Blue</li>
-          </ul>
-        </div>
-        <div class="information">
-          <a href="#" class="title">
-            Cooling mat
-          </a>
-          <span class="price">&euro; 15,49</span>
-        </div>
-      </div>
-    </div>
-
-    <div class="col-md-3">
-      <div class="product">
-        <div class="image" style="background-image:url('images/products/cooling_mat.jpg')">
-          <div class="overlay">
-            <span class="kowicon-product"></span>
-            view details
-          </div>
-          <ul class="colors">
-            <li style="background: white;">White</li>
-            <li style="background: black;">Black</li>
-            <li style="background: blue;">Blue</li>
-          </ul>
-        </div>
-        <div class="information">
-          <a href="#" class="title">
-            Cooling mat
-          </a>
-          <span class="price">&euro; 15,49</span>
-        </div>
-      </div>
-    </div>
-
-    <div class="col-md-3">
-      <div class="product">
-        <div class="image" style="background-image:url('images/products/cooling_mat.jpg')">
-          <div class="overlay">
-            <span class="kowicon-product"></span>
-            view details
-          </div>
-          <ul class="colors">
-            <li style="background: white;">White</li>
-            <li style="background: black;">Black</li>
-            <li style="background: blue;">Blue</li>
-          </ul>
-        </div>
-        <div class="information">
-          <a href="#" class="title">
-            Cooling mat
-          </a>
-          <span class="price">&euro; 15,49</span>
-        </div>
-      </div>
+    <div class="bottom-links">
+      <a href="#">Visit the store</a>
     </div>
   </div>
 
