--- a/frontend/src/styles/home/_home.scss
+++ b/frontend/src/styles/home/_home.scss
@@ -53,11 +53,21 @@ p.intro {
     font-family: 'choplin', serif;
     text-transform: uppercase;
     font-size: 1.3em;
+    &:hover {
+      text-decoration: underline;
+      span {
+        transform: scale(1.2);
+        &.small {
+          transform: scale(0.8);
+        }
+      }
+    }
     span {
       display: block;
       width: 100%;
       font-size: 70px;
       margin-bottom: 17px;
+      transition: transform 300ms;
       &.small {
         transform: scale(0.6);
       }
