--- a/frontend/src/styles/general/_product-grid.scss
+++ b/frontend/src/styles/general/_product-grid.scss
@@ -1,5 +1,10 @@
 .product-grid {
+  h1 {
+    text-transform: uppercase;
+    margin-bottom: 17px;
+  }
   .bottom-links {
+    margin: 5px 0 30px 0;
     text-align: right;
     font-weight: bold;
     font-family: 'choplin', serif;
