--- a/frontend/src/styles/home/_home.scss
+++ b/frontend/src/styles/home/_home.scss
@@ -83,3 +83,54 @@ p.intro {
     }
   }
 }
+
+.newsletter {
+  display: flex;
+  
+  .bg {
+    background: url(../images/bg1.jpg) repeat;
+    text-align: center;
+    padding: 0 200px;
+    h1 {
+      font-family: 'choplin', serif;
+      font-size: 3em;
+      margin: 35px 0 8px 0;
+      span {
+        display:block;
+        font-size: 0.5em;
+        margin-top: 1.2em;
+      }
+    }
+  }
+  .form {
+    padding: 0 40px;
+    background-color: #5f5f5f;
+    display: flex;
+    align-items: center;
+    input.form-control {
+      border-right: none;
+      padding: 20px;
+      font-size: 1.2em;
+      outline: none;
+    }
+    .btn-dark {
+      padding: 8px 8px;
+      font-size: 18px;
+    }
+    ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+      color: black;
+    }
+    ::-moz-placeholder { /* Firefox 19+ */
+      color: black;
+    }
+    h2 {
+      color: #fff;
+      font-size: 1.4em;
+      margin: 0;
+    }
+    p {
+      margin: 3px 0 15px 0;
+      font-size: 0.9em;
+    }
+  }
+}
