quickly added faq

--- a/frontend/src/app/layout/sidebar.html
+++ b/frontend/src/app/layout/sidebar.html
@@ -10,7 +10,7 @@
       </a>
     </li>
     <li>
-      <a href="#" title="FAQ">
+      <a ui-sref="app.faq" ui-sref-active="active" title="FAQ">
         <span class="kowicon-faq"></span>
         FAQ
       </a>
