--- a/frontend/src/styles/search/_search.scss
+++ b/frontend/src/styles/search/_search.scss
@@ -2,6 +2,10 @@
   cursor: pointer;
 }
 
+.filter {
+  margin-bottom: 150px;
+}
+
 .slider {
   margin-top: 7px;
   margin-bottom: 20px;
@@ -19,43 +23,8 @@
   }
 }
 
-.input-group.search {
-  margin-top: 150px;
-  &>*:not(.placeholder) {
-    border-radius: 0;
-    background: none;
-    box-shadow: none;
-    outline: none;
-    border: none;
-    border-bottom: 2px solid $darkColor;
-  }
-  .placeholder {
-    color: $overlayAccent;
-    font-weight: bold;
-    font-size: 2.8em;
-    position: absolute;
-    top: 10px;
-    margin-left: 20px;
-    span {
-      color: $darkColor;
-      position: relative;
-      top: 0.2em;
-    }
-  }
-  .input-group-addon {
-    font-size: 2.2em;
-  }
-  .form-control {
-    height: auto;
-    font-size: 2.8em;
-  }
-}
-
 .results {
   margin-top: 14px;
-  .clear {
-    float: right;
-  }
   .well {
     min-height: 150px;
   }
